platform/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: platform-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*.alex.localhost'
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: platform-certificate
    - hosts:
        - '*.alex.localhost'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
