platform/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
    - "argocd.alex.localhost"
  gateways:
    - platform-gateway
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
